--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
+  "homepage": "http://witekmikolajczak.github.io/portfolio",
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://witekmikolajczak.github.io/weather-app",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
@@ -15,12 +15,12 @@
     "react-dom": "^17.0.2",
     "react-fontawesome": "^1.7.1",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^2.1.3",
     "react-scroll": "^1.8.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeeploy": "npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
